# VisionSense

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTALL_JETPACK_6.2.md  QUICKSTART.md  README.md  README_OPENCV_CUDA.md  RUN_OPENCV_INSTALL.md  VISION2X_WEBSITE_COMPLETE.md  VISION2X_WEBSITE_DESIGN_PROMPT.md  check_build.sh  check_opencv_cuda.sh  cmd.txt  fix_gstwebrtc.sh  fix_stereo_camera.py  install_all_deps.sh  install_jetson_inference.sh  install_opencv_cuda.sh  install_opencv_cuda_orin.sh  install_opencv_cuda_quick.sh  install_ros2.sh  launch_visionconnect.sh  libgstwebrtc-1.0.so.0  opencv_cuda_setup.md  package.xml  reinstall_ros_packages.sh  requirements.txt  run_nodes.sh
.claude/agents/: code-simplicity-reviewer.md
config/: config.yaml
launch/: camera.launch  simple_test.launch.py  stereo_camera.launch.py  test.launch  test.launch.py
launch/dashboard/: dashboard.html
msg/: ADAS.msg  Detect.msg  Lanes.msg  SceneData.msg  Signs.msg  Track.msg
scripts/: node_gps.py
src/: node_adas.cpp  node_camera.cpp  node_classify.cpp  node_dashboard.cpp  node_detect.cpp  node_gui.cpp  node_lanedet.cpp  node_preview.cpp  node_stereo_camera.cpp
src/common/: BYTETracker.cpp  common.cpp  cuda_backend.cpp  trtutil.cpp
src/common/include/: BYTETracker.h  common.h  common.hpp  cuda_backend.h  cuda_ops.h  image_converter.h  logging.h  ros_compat.h  trtutil.h  yolov8.hpp
src/graphs/lane-detection/: lanedet-test.cpp
src/graphs/object-detection/: labels_detect.txt
src/graphs/sign-classifier/: classifier-test.cpp  classify.engine.old  labels_classify.txt  new_class.engine.old_trt  new_labels_classify.txt  yolov8n-TSR.engine.old_trt
src/signs/: Thumbs.db
